save to collections and remove

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -16,7 +16,7 @@
 
 
 .contentWrapper p {
-    @apply text-base text-gray-200 font-semibold leading-relaxed tracking-wider;
+    @apply text-sm text-gray-200 font-semibold leading-relaxed tracking-wider;
 }
 
 .closeIcon {
